--- a/src/styles/pagination.css
+++ b/src/styles/pagination.css
@@ -29,6 +29,10 @@
     background-color: var(--color-primary);
     color: white;
     border-color: var(--color-primary);
+
+    &:hover {
+      background-color: var(--color-primary-hover);
+    }
   }
 
   &:disabled {
